all changes to date.

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,9 @@
 <div id="container">
 	<div id="titlebar">
 		<h1 id="title"><span>ZZZ</span>imple</h1>
+        <div id="toolbar">
+
+        </div>
 	</div>
 	<!-- 
 	<canvas id="myCanvas" width="400px" height="300px"></canvas>
@@ -27,6 +30,10 @@
 	<iframe id="myFrame">
 		
 	</iframe>
+
+    <div id="footerbar">
+        <div id="footer">footer</div>
+    </div>
 </div>
 </body>
 </html>
